--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="flex items-center justify-between relative">
           <div class="px-4">
             <a href="#home" class="font-bold text-lg text-primary block py-6"
-              >fajrikhoirunnisa</a
+              >Fajri Khoirunnisa</a
             >
           </div>
           <div class="flex items-center px-4">
@@ -78,7 +78,7 @@
                 </li>
                 <li class="group pt-2 pl-5">
                   <a
-                    href="https://drive.google.com/file/d/1gyxHBA5zNlmL2GznpJ1dLsVU49XrvDsY/view?usp=drive_link"
+                    href="https://drive.google.com/file/d/1bFYxDYWcF8T3AZANGm72SDO3pNAscBOf/view?usp=sharing"
                     target="_blank"
                     class="text-base text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transtition duration-300 ease-in-out"
                     >Download CV</a
@@ -183,7 +183,6 @@
             <h4 class="uppercase font-semibold text-dark tracking-[.5em] mb-2">
               Portofolio
             </h4>
-            <h2 class="font-bold text-dark mb-4 text-3xl">Recently Project</h2>
           </div>
         </div>
 
@@ -201,8 +200,7 @@
               <p class="w-1/6 pt-2">Laravel</p>
             </div>
             <p class="font-medium text-secondary text-base">
-              Website untuk pengelolaan data UMKM yang berada di Jawa Barat
-              menggunakan bahasa pemograman PHP dan framework Laravel 8.
+              Website for managing UMKM data in West Java using PHP programming language and Laravel 8 framework.
             </p>
           </div>
 
@@ -223,7 +221,7 @@
         </div>
 
         <div class="w-full flex flex-wrap tab-section scroll-m-4">
-          <div class="w-full lg:w-1/3">
+          <div class="w-full md:w-1/3">
             <div class="mb-12 mt-8 p-4 flex-col space-y-4 font-medium">
               <button class="py-3 rounded-lg font-bold flex-grow items-center w-full border-2 border-primary text-slate-600 hover:shadow-lg transtition duration-300 ease-in-out hover:bg-orange-500 focus:outline-none focus:ring focus:ring-orange-300 focus:bg-orange-600 focus:text-white" data-tab-target="#tab1">Experience</button>
               <button class="py-3 rounded-lg font-bold flex-grow w-full border-2 border-primary text-slate-600 hover:shadow-lg transtition duration-300 ease-in-out hover:bg-orange-500 focus:outline-none focus:ring focus:ring-orange-300 focus:bg-orange-600 focus:text-white" data-tab-target="#tab2">Education</button>
@@ -231,7 +229,7 @@
             </div>
           </div>
 
-          <div class="w-full px-4 lg:w-2/3">
+          <div class="w-full px-4 md:w-2/3">
             <div class="mb-12">
 
               <!-- Experience -->
