--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
                 <li class="group pt-2 pl-5">
                   <a
-                    href="https://drive.google.com/file/d/1bFYxDYWcF8T3AZANGm72SDO3pNAscBOf/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1Yjva1aHVbj7Z_PbdTqFG9W20bpeu879u/view?usp=sharing"
                     target="_blank"
                     class="text-base text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transtition duration-300 ease-in-out"
                     >Download CV</a
@@ -234,14 +234,19 @@
 
               <!-- Experience -->
               <div class="tab-content tab-panel" id="tab1">
-                <h1 class="text-2xl font-bold text-center lg:text-left text-gray-700 mb-4">My Experience</h1>
-                <div class="flex flex-wrap lg:flex-nowrap gap-4">
+                <h1 class="text-2xl font-bold text-center lg:text-left text-gray-700 mb-4">My Experience</h1>                  
+                <div class="grid lg:grid-cols-2 gap-4 rounded-lg h-72 overflow-y-scroll overscroll-auto">
+                  <div class="p-6 text-gray-500 bg-orange-100 shadow-lg rounded-lg w-full">
+                    <p class="mb-1 text-orange-900 font-mono font-thin">Jul 2024 - Des 2024</p>
+                    <p class="mb-7 font-semibold text-slate-800">Computer Operation</p>
+                    <li class="mb-1 text-orange-900"><span class="text-secondary text-sm">Direktorat Jendral Bina Pemerintahan Desa</span></li>
+                  </div>
                   <div class="p-6 text-gray-500 bg-orange-100 shadow-lg rounded-lg w-full">
                     <p class="mb-1 text-orange-900 font-mono font-thin">Feb 2022 - Aug 2022</p>
                     <p class="mb-7 font-semibold text-slate-800">Full-Stack Developer</p>
                     <li class="mb-1 text-orange-900"><span class="text-secondary text-sm">KLT BSN West Java</span></li>
                   </div>
-                  <div class="p-6 text-gray-500 bg-orange-100 shadow-lg rounded-lg w-full">
+                  <div class="p-6 text-gray-500 bg-orange-100 shadow-lg rounded-lg row-start-2 w-full">
                     <p class="mb-1 text-orange-900 font-mono font-thin">Oct 2021 - Feb 2022</p>
                     <p class="mb-7 font-semibold text-slate-800">Internship</p>
                     <li class="mb-1 text-orange-900"><span class="text-secondary text-sm">MOOC Apticom</span></li>
@@ -265,7 +270,7 @@
               <!-- Skills -->
               <div class="tab-content tab-panel hidden" id="tab3">
                 <h1 class="text-2xl font-bold text-center lg:text-left text-gray-700 mb-4">My Skills</h1>
-                  <div class="grid md:grid-cols-4 gap-4 rounded-lg h-72 overflow-y-scroll overscroll-none">
+                  <div class="grid md:grid-cols-4 gap-4 rounded-lg h-72 overflow-y-scroll overscroll-auto">
                     <button class="lg:w-full w-32 h-32 rounded-lg flex mx-auto justify-center items-center text-slate-700 bg-orange-100 hover:text-slate-200 hover:bg-primary hover:shadow-lg transtition duration-300 ease-in-out">
                       <svg role="img" class="size-20" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>PHP</title><path d="M7.01 10.207h-.944l-.515 2.648h.838c.556 0 .97-.105 1.242-.314.272-.21.455-.559.55-1.049.092-.47.05-.802-.124-.995-.175-.193-.523-.29-1.047-.29zM12 5.688C5.373 5.688 0 8.514 0 12s5.373 6.313 12 6.313S24 15.486 24 12c0-3.486-5.373-6.312-12-6.312zm-3.26 7.451c-.261.25-.575.438-.917.551-.336.108-.765.164-1.285.164H5.357l-.327 1.681H3.652l1.23-6.326h2.65c.797 0 1.378.209 1.744.628.366.418.476 1.002.33 1.752a2.836 2.836 0 0 1-.305.847c-.143.255-.33.49-.561.703zm4.024.715l.543-2.799c.063-.318.039-.536-.068-.651-.107-.116-.336-.174-.687-.174H11.46l-.704 3.625H9.388l1.23-6.327h1.367l-.327 1.682h1.218c.767 0 1.295.134 1.586.401s.378.7.263 1.299l-.572 2.944h-1.389zm7.597-2.265a2.782 2.782 0 0 1-.305.847c-.143.255-.33.49-.561.703a2.44 2.44 0 0 1-.917.551c-.336.108-.765.164-1.286.164h-1.18l-.327 1.682h-1.378l1.23-6.326h2.649c.797 0 1.378.209 1.744.628.366.417.477 1.001.331 1.751zM17.766 10.207h-.943l-.516 2.648h.838c.557 0 .971-.105 1.242-.314.272-.21.455-.559.551-1.049.092-.47.049-.802-.125-.995s-.524-.29-1.047-.29z"/></svg>
                     </button>
